# entity-sprite-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeTools.cmake  LICENSE.md  LUA Rework.md  STYLE GUIDE.md  WARP.md  debug_camera.lua  debug_key.lua  debug_rect_rotation  readme.md  test_camera_lua.lua  test_key_debug.c  test_key_debug.lua  test_polyline.lua  todo.md  try.md
docs/: COLLISION SYSTEM PLAN.md  LUA Global.md  Memory Allocation.md  REVIEW AUDIO.md  REVIEW.md  SCENE DESIGN PLAN.md  STYLE GUIDE.md  Systems Architecture Overview.md  arc.md  camera.md  display.md  entity.md  entity_code_review.md  entitycomponent.md  global.md  gui.md  inputstate.md  map.md  mapcell.md  point.md  poly_line.md  ray.md  rect.md  style.md  tileset.md  uuid.md  vector.md
docs/design plans/: EMITTER PLAN.md  SCENE DESIGN PLAN.md
docs/map_collision/: plan.md
docs/system/: entity_code_review.md  latest review.md  lua.md
docs/temp/: 1.md  2.md  3.md  4.md
docs/types/: arc.md  camera.md  collision_hit.md  color.md  entity.md  entitycomponent.md  global.md  gui.md  gui_style.md  http.md  inputstate.md  mapcell.md  point.md  ray.md  rect.md  tileset.md  uuid.md  vector.md
examples/: CMakeLists.txt
examples/assets/: grassland.json  horse.lua  horse_saddle.json  map.json  skull.lua  startup.lua
examples/audio/: CMakeLists.txt  Info.plist  main.c
examples/audio/assets/: gui.lua  listener.lua  player.lua  startup.lua
examples/bounce/: CMakeLists.txt  Info.plist  bounce.c
examples/bounce/assets/: ball.lua  balls.json  manager.lua  startup.lua
examples/breakout/: CMakeLists.txt  breakout.c
examples/breakout/assets/: ball.lua  brick.lua  bricks.json  gamemanager.lua  gamestate.lua  paddle.lua  paddle_ball.json  startup.lua
examples/collisions/: CMakeLists.txt  main.c
examples/collisions/assets/: object.lua  startup.lua  target.lua
examples/shapes/: CMakeLists.txt  Info.plist  main.c
examples/shapes/assets/: display.lua  horse.lua  rotate.lua  startup.lua
examples/simple/: CMakeLists.txt  Info.plist  main.c
examples/simple/assets/: grassland.json  grassland.jsonc  gui.lua  horse.lua  http.lua  map.json  map.jsonc  map.lua  shaders.glsl  shaders.metal  skull.json  skull.lua  startup.lua  topDownController.lua
extras/: ese-tiled-extension.js
src/: EseSystem.md
src/audio/: pcm.c  pcm.h
src/core/: asset_manager.c  asset_manager.h  collision_index.c  collision_index.h  collision_resolver.c  collision_resolver.h  collision_system.c  collision_system.h  console.c  console.h  engine.c  engine.h  engine_lua.c  engine_lua.h  engine_private.c  engine_private.h  memory_manager.c  memory_manager.h  pubsub.c  pubsub.h  spatial_index.c  spatial_index.h  system_manager.c  system_manager.h  system_manager_private.h
src/entity/: entity.c  entity.h  entity_lua.c  entity_lua.h  entity_private.c  entity_private.h
src/entity/bindings/: collider.c  collider.h  listener.c  listener.h
src/entity/components/: collider.c  collider.h  entity_component.c  entity_component.h  entity_component_collider.c  entity_component_collider.h  entity_component_listener.c  entity_component_listener.h  entity_component_lua.c  entity_component_lua.h  entity_component_map.c  entity_component_map.h  entity_component_music.c  entity_component_music.h  entity_component_private.h  entity_component_shape.c  entity_component_shape.h  entity_component_shape_path.c  entity_component_shape_path.h  entity_component_sound.c  entity_component_sound.h  entity_component_sprite.c  entity_component_sprite.h  entity_component_text.c  entity_component_text.h  listener.c  listener.h
src/entity/systems/: cleanup_system.c  cleanup_system.h  collider_render_system.c  collider_render_system.h  collider_system.c  collider_system.h  lua_system.c  lua_system.h  map_lua_system.c  map_lua_system.h  map_render_system.c  map_render_system.h  map_system.c  map_system.h  shape_render_system.c  shape_render_system.h  sound_system.c  sound_system.h  sound_system_lua.c  sound_system_lua.h  (+7 more)
src/graphics/: draw_list.c  draw_list.h  font-10x20.c  font-8x8-basic.c  font.c  font.h  gui.c  gui.h  gui_lua.c  gui_lua.h  gui_private.c  gui_private.h  render_list.c  render_list.h  shader.cpp  shader.h  sprite.c  sprite.h
src/platform/: audio.h  default_shader.h  filesystem.h  renderer.h  renderer_private.h  time.h  window.h
src/scripting/: bindings.c  bindings.h  lua_engine.c  lua_engine.h  lua_engine_private.c  lua_engine_private.h  lua_value.c  lua_value.h
src/types/: arc.c  arc.h  arc_lua.c  arc_lua.h  camera.c  camera.h  camera_lua.c  camera_lua.h  collision_hit.c  collision_hit.h  collision_hit_lua.c  collision_hit_lua.h  color.c  color.h  color_lua.c  color_lua.h  display.c  display.h  display_lua.c  display_lua.h  display_private.h  gui_style.c  gui_style.h  gui_style_lua.c  gui_style_lua.h  http.c  http.h  http_lua.c  http_lua.h  input_state.c  input_state.h  input_state_lua.c  input_state_lua.h  input_state_private.h  map.c  map.h  map_cell.c  map_cell.h  map_cell_lua.c  map_cell_lua.h  (+36 more)
src/utility/: array.c  array.h  double_linked_list.c  double_linked_list.h  grouped_hashmap.c  grouped_hashmap.h  hash.c  hash.h  hashmap.c  hashmap.h  helpers.c  helpers.h  int_hashmap.c  int_hashmap.h  job_queue.c  job_queue.h  log.c  log.h  profile.c  profile.h  spatial_bin.c  spatial_bin.h  spatial_index.c  thread.c  thread.h
tests/: CMakeLists.txt  README.md  test_arc.c  test_audio.c  test_bottleneck.c  test_camera.c  test_collision_hit.c  test_color.c  test_display.c  test_ecs_collider.c  test_ecs_lua.c  test_ecs_map.c  test_ecs_shape.c  test_ecs_sprite.c  test_ecs_text.c  test_engine.c  test_engine_collision.c  test_entity.c  test_entity_component_lua.c  test_entity_listener.c  test_entity_pubsub.c  test_gui.c  test_gui_style.c  test_input_state.c  test_job_queue.c  test_log_assert.c  test_lua_engine.c  test_lua_engine_benchmark.c  test_lua_only.c  test_lua_value.c  test_map.c  test_map_cell.c  test_memory_manager.c  test_point.c  test_poly_line.c  test_pubsub.c  test_ray.c  test_rect.c  test_scene.c  test_system_manager.c  (+8 more)
(+33 files in other folders)
